# unilabs

./: README.md
2_semester/lab2/: CMakeLists.txt  README.md  main.cpp
2_semester/lab2/lib/: arraysequence.cpp  arraysequence.h  custom.cpp  custom.h  dynamicarray.cpp  dynamicarray.h  linkedlist.cpp  linkedlist.h  listsequence.cpp  listsequence.h  main.cpp  sequence.h
2_semester/lab2/src/: CMakeLists.txt  arraysequence.cpp  arraysequence.h  dynamicarray.cpp  dynamicarray.h  linkedlist.cpp  linkedlist.h  listsequence.cpp  listsequence.h  sequence.h  vector.cpp  vector.h
2_semester/lab2/test/: CMakeLists.txt
2_semester/lab2/test/actual_tests/: CMakeLists.txt  main.cpp
2_semester/lab2/tests/: main.cpp
2_semester/lab2final/: CMakeLists.txt  main.cpp
2_semester/lab2final/lib/googletest-master/docs/: advanced.md  gmock_cook_book.md  gmock_faq.md
2_semester/lab2final/lib/googletest-master/googlemock/src/: gmock-internal-utils.cc  gmock-matchers.cc
2_semester/lab2final/lib/googletest-master/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
2_semester/lab2final/src/: arraysequence.cpp  arraysequence.h  dynamicarray.cpp  dynamicarray.h  linkedlist.cpp  linkedlist.h  listsequence.cpp  listsequence.h  matrix.cpp  matrix.h  sequence.h  vector.cpp  vector.h
2_semester/lab2final/tests/: ClassName.h  test.cpp
2_semester/lab3/: CMakeLists.txt  README.md  main.cpp  time.xlsx
2_semester/lab3/src/: CMakeLists.txt  arraysequence.cpp  arraysequence.h  complex.cpp  complex.h  extra.h  functions.h  heap.cpp  heap.h  person.cpp  person.h  sequence.h  set.cpp  set.h
2_semester/lab3/test/actual_tests/: main.cpp
2_semester/lab3/test/lib/googletest/samples/: sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample4_unittest.cc  sample5_unittest.cc
2_semester/lab3/test/lib/googletest/scripts/: gen_gtest_pred_impl.py
3_semester/lab1/: CMakeLists.txt  README.md  main.cpp
3_semester/lab1/conclusion/: arraycomparison.xlsx  listcomparison.xlsx  tz.docx
3_semester/lab1/sorts/: arrayAllSorts.txt  arrayBubbleSort.txt  arrayInsertionSort.txt  arrayMergeSort.txt  arrayQuickSort.txt  arraySelectionSort.txt  arrayShellSort.txt  listAllSorts.txt  listBubbleSort.txt  listInsertionSort.txt  listMergeSort.txt  listQuickSort.txt  listSelectionSort.txt
3_semester/lab1/sortscomparison/: arraycomparison.csv  listcomparison.csv
3_semester/lab1/src/: CMakeLists.txt  arraysequence.cpp  arraysequence.h  functions.h  isorter.cpp  isorter.h  linkedlist.h  listsequence.h
3_semester/lab1/test/: CMakeLists.txt
3_semester/lab1/test/actual_tests/: CMakeLists.txt  main.cpp
3_semester/lab3/: CMakeLists.txt  README.md  extrafunctions.h  graph.cpp  graph.h  main.cpp
3_semester/lab3/measuredtime/: timemeasurement.csv  timemeasurementDIRECTED.csv  timemeasurementUNDIRECTED.csv
3_semester/lab3/test/actual_tests/: main.cpp
3_semester/lab3/visualization/: drawGraph.py
4_semester/: information.txt
(+146 files in other folders)
